# crypto-trading-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/hooks/: session-start.sh
.claude/skills/llm-council/: SKILL.md
api/: app.py
backtest/: __init__.py  longrun.py  replay.py  run.py
config/: settings.yaml
docs/: raspberry-pi-setup.md
engine/: __init__.py  config.py  core.py  main.py  models.py  runtime.py
engine/approval/: __init__.py  queue.py
engine/coach/: __init__.py  discipline.py  narrator.py
engine/data/: __init__.py  feed.py  ohlcv.py
engine/db/: __init__.py  models.py  repo.py  session.py
engine/execution/: __init__.py  base.py  ccxt_adapter.py  paper_adapter.py
engine/indicators/: __init__.py  trend.py  volatility.py  vwap.py
engine/notify/: __init__.py  base.py  telegram_adapter.py  ws_channel.py
engine/risk/: __init__.py  manager.py
engine/strategy/: __init__.py  base.py  vwap_meanrev.py  vwap_trend.py
tests/: test_indicators.py  test_risk.py  test_strategy_replay.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  useLiveSocket.ts
