[project]
name = "crypto-trading-bot"
version = "0.1.0"
description = "Psychological co-pilot trading bot for crypto (VWAP trend-pullback, paper/demo only)"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.4.0",
    "pandas>=2.1",
    "numpy>=1.26",
    "pandas-ta-classic>=0.4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "python-telegram-bot>=21.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "backtesting>=0.3.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["engine", "api", "backtest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
